--- a/JIRATicket-Project/Style.css
+++ b/JIRATicket-Project/Style.css
@@ -1,133 +1,193 @@
-*{
+* {
     box-sizing: border-box;
 }
-body{
-    margin :0;
-    padding : 0;
+
+body {
+    margin: 0;
+    padding: 0;
 }
+
 .toolbox-cont {
-    height : 5rem;
+    height: 5rem;
     background-color: #576574;
-    display : flex;
+    display: flex;
     align-items: center;
 }
-.toolbox-cont > *{
-    margin-left : 4rem;
+
+.toolbox-cont>* {
+    margin-left: 4rem;
     border-radius: 2px;
 }
+
 .toolbox-priority-cont {
-    height : 3.5rem;
-    width : 16rem;
+    height: 3.5rem;
+    width: 14rem;
     background-color: #8395a7;
-    display : flex;
+    display: flex;
     justify-content: space-around;
-    align-items:center;
+    align-items: center;
 }
+
 .action-btn-cont {
-    height :3.5rem;
-    width : 8rem;;
-    background-color:#8395a7;   
+    height: 3.5rem;
+    width: 6rem;
+    background-color: #8395a7;
     display: flex;
 }
-.action-btn-cont > * {
-    display : flex;
+
+.action-btn-cont>* {
+    display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.5rem;
-    width : 50%;
+    width: 50%;
     color: #c8d6e5;
 }
-.color{
-    height : 1.5rem;
-    width : 2.5rem;
+
+.color {
+    height: 1.2rem;
+    width: 2rem;
     background-color: #dfe4ea;
     border-radius: 2px;
 }
-.lightpink{
+
+.lightpink {
     background-color: lightpink;
 }
-.lightblue{
-    background-color:lightblue;
+
+.lightblue {
+    background-color: lightblue;
 }
-.lightgreen{
+
+.lightgreen {
     background-color: lightgreen;
 }
-.black
-{
+
+.black {
     background-color: black;
 }
-.action-btn-cont > *:hover{
+
+.action-btn-cont>*:hover {
     background: white;
 }
-.modal-cont{
-    height :50vh;
-    width : 45vw;
-    background-color: lightblue;
+
+.modal-cont {
+    height: 50vh;
+    width: 45vw;
+    background-color: #576574;
     position: absolute;
-    top:calc((100vh - 50vh)/2);
-    left : calc((100vw - 45vw)/2);
-    display : none;
+    top: calc((100vh - 50vh)/2);
+    left: calc((100vw - 45vw)/2);
+    display: none;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
-.textarea-cont{
+
+.textarea-cont {
     height: 100%;
-    width : 75%;
+    width: 75%;
     border: none;
-    outline : none;
+    outline: none;
     background-color: #576574;
     resize: none;
-    padding : 2rem;
-    font-size : 1.5rem;
-    color : white;
+    padding: 2rem;
+    font-size: 1.5rem;
+    color:white;
 }
-.priority-colors-cont{
-    height : 100%;
-    width : 25%;
+textarea::-webkit-input-placeholder {
+    color: white;
+  }
+  
+
+.priority-colors-cont {
+    height: 100%;
+    width: 25%;
     background-color: #8395a7;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
 }
-.priority-color{
-    height : 3rem;
-    width : 55%;
-}
-.border{
-    border:5px solid #f5f6fa;
+
+.priority-color {
+    height: 3rem;
+    width: 55%;
 }
 
-.ticket-cont{
-    height : 13rem;
-    width : 16rem;
+.border {
+    border: 5px solid #f5f6fa;
+}
+
+.ticket-cont {
+    height: 13rem;
+    width: 16rem;
     background-color: #4b4b4b;
 }
-.ticket-color{
-    height : 1rem;
+
+.ticket-color {
+    height: 1rem;
 }
-.ticket-id{
+
+.ticket-id {
     height: 2rem;
     background-color: #dfe4ea;
-    padding : 0.4rem;
+    padding: 0.4rem;
 }
-.task-area{
-    height : calc( 100% - 1rem - 2rem - 2rem);
+
+.task-area {
+    height: calc(100% - 1rem - 2rem - 2rem);
     background-color: #dfe4ea;
-    padding : 0.4rem;
-    outline : none; 
+    padding: 0.4rem;
+    outline: none;
 }
-.ticket-lock{
-    height : 2rem;
-    display : flex;
+
+.ticket-lock {
+    height: 2rem;
+    display: flex;
     background-color: #dfe4ea;
     font-size: 1.5rem;
     color: #4b4b4b;
-    padding-right : 1rem;
+    padding-right: 1rem;
     justify-content: flex-end;
 }
-.main-cont{
-    display : flex;
+
+.main-cont {
+    display: flex;
     flex-wrap: wrap;
-    padding : 2rem;
-    gap : 2rem;
+    padding: 2rem;
+    gap: 2rem;
     justify-content: center;
+}
+
+@media screen and (min-width :425px) and (max-width : 768px) {
+    .modal-cont {
+        width: 60vw;
+        left: calc( ( 100vw - 60vw ) / 2);
+    }
+
+}
+
+@media screen and (max-width : 426px) {
+    .modal-cont {
+        width: 75vw;
+        height : 50vh;
+        top :calc( ( 100vh - 50vh )/2);
+        left: calc( ( 100vw - 75vw ) / 2);
+        flex-direction: column;
+    }
+
+    .priority-colors-cont {
+        flex-direction: row;
+        width: 100%;
+        height: 25%;
+    }
+    .textarea-cont{
+        width :100;height:75%;
+    }
+    .priority-color{
+        width: 17%;
+    }
+    .toolbox-cont>*{
+        margin-left: 2rem;
+        border-radius: 2px;
+    }
 }
