--- a/Camera-Gallery/style.css
+++ b/Camera-Gallery/style.css
@@ -25,6 +25,7 @@ video{
     display : flex;
     flex-direction : column;
     justify-content: space-between;
+    z-index: 2;
 }
 .action-cont > *{
     width :100%;
@@ -84,4 +85,43 @@ video{
 }
 .timer{
     display : none;
+}
+.filter-cont{
+    position : absolute;
+    top :calc((100vh - 16rem)/2);
+    left : 5rem;
+    height : 16rem;
+    width : 5rem;
+    background-color: aliceblue;
+    z-index: 2;
+}
+.filter{
+    height : 4rem;
+    background-image: url("https://picsum.photos/seed/picsum/200/300");
+    background-position: center;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    
+    background-blend-mode: color-burn;
+}
+.orange{
+    background-color: #ffa50038;
+} 
+.brown{
+    background-color: #a52a2a75;
+}
+.pink{
+    background-color: #ffc0cb69;
+}
+.transparent{
+    background-color: transparent;
+}
+.filter-layer{
+    position:absolute;
+    top:0;
+    left:0;
+    height: 100vh;
+    width : 100vw;
+    /* background-color: #ffa50038; */
+    z-index: 1;
 }
