--- a/Camera-Gallery/style.css
+++ b/Camera-Gallery/style.css
@@ -125,3 +125,16 @@ video{
     /* background-color: #ffa50038; */
     z-index: 1;
 }
+.material-icons{
+    color : white;
+    font-size: 3rem;
+}
+.gallery{
+    position : absolute;
+    right : 6rem;
+    bottom : 7rem;
+    z-index: 2;
+}
+.gallery:hover{
+    cursor: pointer;
+}
