--- a/Camera-Gallery/galllery.css
+++ b/Camera-Gallery/galllery.css
@@ -14,7 +14,50 @@ body{
     display : flex;
     justify-content: center;
     align-items : center;
+    position: fixed;
+    bottom: 4rem;
+    right : 5rem;
 }
 .back:hover{
     cursor: pointer;
+}
+.gallery-cont{
+    background-color: #ced6e0;
+    min-height:100vh;
+    width: 100vw;
+    display: flex;
+    flex-wrap : wrap;
+    justify-content: center;
+}
+.media-cont{
+    height :15rem;
+    width : 15rem;
+    border : 10px solid white;
+    /* background-color: lightgreen; */
+    margin: 2rem;
+}
+.media>*{
+    height: 100%;
+    width : 100%;
+    object-fit: fill;
+}
+.media{
+    height:calc(100% - 2rem - 2rem);
+    /* background-color: orange; */
+}
+.action-btn{
+    height: 2rem;
+    color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.action-btn:hover{
+    cursor: pointer;
+}
+.download{
+    background-color: black;
+}
+.delete{
+    background-color: rgb(223,43,43);
 }
